kubernetes/kube-config.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
  namespace: default
  labels:
    app: hello
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
        - name: app
          image: hello-app
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: ip-logs
              mountPath: /logs/
      volumes:
        - name: ip-logs
          persistentVolumeClaim:
            claimName: ip-logs-claim
---
apiVersion: v1
kind: Service
metadata:
  name: hello-svc
  namespace: default
spec:
  type: NodePort
  selector:
    app: hello
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: hello-svc
                port:
                  number: 8080
